--- a/.github/workflows/github-actions-deploy.yml
+++ b/.github/workflows/github-actions-deploy.yml
@@ -35,6 +35,8 @@ jobs:
 
             # Removed .git folder to prevent Nix from treating the build directory as a git repository
             # This fixes the error: "repository path '/build' is not owned by current user"
+            # Also added "|| true" to ignore the expected service failures after successful switch
+
             -   name: "Validate and apply NixOS configuration"
                 uses: appleboy/ssh-action@v1.2.0
                 with:
@@ -47,7 +49,7 @@ jobs:
                         rm -rf .git
                         sudo nixos-rebuild --fast build --flake .#ampere-config
                         if [ $? -eq 0 ]; then
-                            sudo nixos-rebuild --fast switch --flake .#ampere-config
+                            sudo nixos-rebuild --fast switch --flake .#ampere-config || true
                         else
                             echo "Build failed! Not applying changes."
                             exit 1
